--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "eslint \"**/*.{ts,tsx,js,jsx}\"",
     "prepare": "husky install",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "INLINE_RUNTIME_CHUNK=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
