--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,10 +14,10 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - name: Checkout
-    - uses: actions/checkout@v2
+    	uses: actions/checkout@v2
     
     - name: Tag
-    - uses: Klemensas/action-autotag@stable
+    	uses: Klemensas/action-autotag@stable
       with:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
