--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,11 +13,11 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-    - name: Checkout
-    	uses: actions/checkout@v2
-    
-    - name: Tag
-    	uses: Klemensas/action-autotag@stable
+    - uses: actions/checkout@v2
+      name: Checkout
+
+    - uses: Klemensas/action-autotag@stable
+      name: Tag
       with:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
@@ -27,8 +27,8 @@ jobs:
     - name: Zip
       run: zip -r build .
     
-    - name: Release
     - uses: actions/create-release@v1
+      name: Release
       env: 
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
