--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,11 +16,6 @@ jobs:
     - uses: actions/checkout@v2
       name: Checkout
 
-    - uses: Klemensas/action-autotag@stable
-      name: Tag
-      with:
-        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-
     - name: Install
       run: npm install
 
@@ -30,11 +25,12 @@ jobs:
     - name: Zip
       run: zip -r build .
     
-    - uses: actions/create-release@v1
+    - uses: svenstaro/upload-release-action@v2
       name: Release
       env: 
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        artifacts: "build.zip"
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: build.zip
+        asset_name: app
+        tag: 0.1.0
