--- a/package.json
+++ b/package.json
@@ -1,55 +1,57 @@
 {
-  "name": "onsem",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.1",
-    "@types/node": "^16.11.35",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "^2.1.3",
-    "rewire": "^6.0.0",
-    "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
-  },
-  "scripts": {
-    "lint": "eslint \"**/*.{ts,tsx,js,jsx}\"",
-    "prepare": "husky install",
-    "start": "react-scripts start",
-    "build": "INLINE_RUNTIME_CHUNK=false node ./build.js",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^16.2.4",
-    "@commitlint/config-conventional": "^16.2.4",
-    "@types/chrome": "^0.0.185",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
-    "eslint": "^8.15.0",
-    "eslint-plugin-jest": "^26.2.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "husky": "^8.0.1",
-    "prettier": "^2.6.2",
-    "prettier-eslint": "^14.0.3"
-  }
+    "name": "onsem",
+    "version": "0.0.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.2.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.1",
+        "@types/node": "^16.11.35",
+        "@types/react": "^18.0.9",
+        "@types/react-dom": "^18.0.4",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
+        "react-scripts": "^2.1.3",
+        "rewire": "^6.0.0",
+        "typescript": "^4.6.4",
+        "web-vitals": "^2.1.4",
+        "xlsx": "^0.18.5"
+    },
+    "scripts": {
+        "lint": "eslint \"**/*.{ts,tsx,js,jsx}\"",
+        "prepare": "husky install",
+        "start": "react-scripts start",
+        "build": "INLINE_RUNTIME_CHUNK=false node ./build.js",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^16.2.4",
+        "@commitlint/config-conventional": "^16.2.4",
+        "@types/chrome": "^0.0.185",
+        "@typescript-eslint/eslint-plugin": "^5.23.0",
+        "@typescript-eslint/parser": "^5.23.0",
+        "eslint": "^8.15.0",
+        "eslint-plugin-jest": "^26.2.0",
+        "eslint-plugin-react": "^7.29.4",
+        "eslint-plugin-react-hooks": "^4.5.0",
+        "husky": "^8.0.1",
+        "isomorphic-git": "^1.17.2",
+        "prettier": "^2.6.2",
+        "prettier-eslint": "^14.0.3",
+        "semver": "^7.3.7"
+    }
 }
