--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       name: Checkout
+      run: |
+        git fetch --prune --unshallow --tags
+        echo exit code $?
+        git tag --list
 
     - name: Install
       run: npm install
