--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       name: Checkout
-      run: |
+
+    - run: |
         git fetch --prune --unshallow --tags
         echo exit code $?
         git tag --list
