--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,8 @@ jobs:
     - uses: actions/checkout@v2
       name: Checkout
 
-    - run: |
+    - name: Get Tags
+      run: |
         git fetch --prune --unshallow --tags
         echo exit code $?
         git tag --list
@@ -33,7 +34,6 @@ jobs:
     - name: Get next version
       id: get-next-version
       run: |
-        echo "$(node get-next-version.js)"
         echo "::set-output name=version::$(node get-next-version.js)"
     
     - uses: svenstaro/upload-release-action@v2
